binsard/tests/compile_fail/enum_too_many_variants.rs
use binsard::{Encode, Decode};

#[derive(Encode, Decode)]
#[binsard(bits = 1)]
enum TooMany {
    A,
    B,
    C,
}

fn main() {}
